--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,34 @@
 {
   "compilerOptions": {
+    // 目标代码（ts --> js(es5/6/7)）
     "target": "esnext",
+    // 目标代码需要使用的模块化方案（commonjs require/module.exports/es module import/export）
     "module": "esnext",
+    // 严格模式：严格一些的检查
     "strict": true,
+    // 对jsx进行怎样的处理
     "jsx": "preserve",
+    // 辅助的导入功能
     "importHelpers": true,
+    // 按照node的方式去解析模块
     "moduleResolution": "node",
+    // 跳过一些库的类型检测
     "skipLibCheck": true,
+    // 要不要用混合模块化 esmodule、commonjs
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    // 要不要生成映射文件
     "sourceMap": true,
+    // 文件路径在解析时,基本url
     "baseUrl": ".",
+    // 指定具体要解析使用的类型
     "types": ["webpack-env"],
+    // 路径解析
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "components/*": ["src/components/*"]
     },
+    // 可以指定在项目中可以使用哪些库的类型,比如:(Proxy, Window, Documnet)
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
   "include": [
