--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "prettier": "^2.3.2",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "vue-loader-v16": "^16.0.0-beta.5.4"
   },
   "config": {
     "commitizen": {
