--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "highlight.js": "^11.4.0",
     "normalize.css": "^8.0.1",
     "vue": "^3.2.22",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^4.0.10",
     "vuex": "^4.0.2",
     "wangeditor": "^4.7.12"
